--- a/YanKenPo/styles.css
+++ b/YanKenPo/styles.css
@@ -19,34 +19,50 @@
 }
 @keyframes moveInDown {
     from{
-        transform: translateY(-40em);
+        transform: translateY(-40rem);
     }
     to{
-        transform: translateY(0em);
+        transform: translateY(0rem);
     }
 }
 @keyframes moveInUp {
     from{
-        transform: translateY(40em);
+        transform: translateY(40rem);
     }
     to{
-        transform: translateY(0em);
+        transform: translateY(0rem);
     }
 }
 @keyframes moveInLeft {
     from{
-        transform: translate(40em);
+        transform: translate(40rem);
     }
     to{
-        transform: translate(0em);
+        transform: translate(0rem);
     }
 }
 @keyframes moveInRight {
     from{
-        transform: translate(-40em);
+        transform: translate(-40rem);
     }
     to{
-        transform: translate(0em);
+        transform: translate(0rem);
+    }
+}
+@keyframes oscilate1 {
+    from{
+        transform: translateY(0rem);
+    }
+    to {
+        transform: translateY(-10rem);
+    }
+}
+@keyframes oscilate2 {
+    from{
+        transform: translateY(20rem);
+    }
+    to {
+        transform: translateY(0rem);
     }
 }
 
@@ -59,6 +75,8 @@
     animation-name: fadeIn;
     animation-duration: 1s;
     scroll-behavior: smooth;
+    border: 1p dotted var(--colorSecundarioT);
+    transition: all 0.5s;
 } 
 html{
     font-size: 62.5%;
@@ -77,29 +95,163 @@ html, body {
     color: var(--colorEnPrimario);
 }
 :root{
-    --colorPrimario: rgb(221, 84, 84);
-    --colorPrimarioT: rgba(221, 84, 84, 0.8);
+    --colorPrimario: rgb(244, 242, 239);
+    --colorPrimarioT: rgba(244, 242, 239, 0.8);
 
-    --colorEnPrimario: rgb(255, 255, 255);
-    --colorEnPrimarioT: rgba(255, 255, 255, 0.8);
+    --colorEnPrimario: rgb(61, 72, 80);
+    --colorEnPrimarioT: rgb(146, 150, 153);
     
-    --colorSecundario: rgb(237, 219, 192);
-    --colorSecundarioT: rgba(237, 219, 192, 0.8);
+    --colorSecundario: rgb(0, 185, 169);
+    --colorSecundarioT: rgb(0, 185, 169, 0.7);
+
+    --texto: 1.5rem;
+    --subtitulo: 2.5rem;
+    --titulo: 3.5rem;
+    --banner: 5rem;
 }
 
 /*Fin de estilos generales*/
 
 header {
     width: 100vw;
-    min-height: 15vh;
+    height: 15vh;
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    animation: moveInDown 2s;
+}
+.container {
+    height: 100%;
+    padding: 0 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.container img {
+    height: 100%;
+    margin: 0 auto;
+}
+.container > div {
+    margin: 0 15rem 0 15rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.container > div a{
+    margin: 0 2rem 0 2rem;
+    padding: 0 2rem;
+    font-size: var(--texto);
+    color: var(--colorEnPrimario);
+    text-decoration: none;
+    width: 15rem;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all 0.5s;
+}
+.container > div a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--colorSecundario);
+    text-decoration-color: var(--colorSecundario);
 }
 
 main {
     width: 100vw;
     min-height: 85vh;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-content: center;
+    grid-template-columns: 4fr 5fr;
+}
+#left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    padding-left: 5rem;
+}
+#left h1 {
+    max-width: 80%;
+    font-size: var(--banner);
+    margin: 2rem 4rem;
+    font-weight: 300;
+}
+#left span {
+    max-width: 60%;
+    font-size: var(--subtitulo);
+    color: var(--colorEnPrimarioT);
+    margin: 2rem 4rem;
+}
+#left > div {
+    margin: 2.5rem ;
+    width: fit-content;
+    height: fit-content;
+}
+#left a {
+    width: 100%;
+    font-size: var(--texto);
+    text-decoration: none;
+    padding: 1rem 2rem;
+    text-align: center;
+    border-radius: 3%;
+    margin: 0 2rem;
+    font-weight: bold;
+}
+#left a:hover{
+    cursor: pointer;
+    padding: 1.5rem 2.5rem;
+}
+#left #play {
+    color: var(--colorPrimario);
+    background-color: var(--colorSecundario);
+}
+#left #code {
+    color: var(--colorEnPrimarioT);
+    background-color: var(--colorPrimario);
+    border-top: 1px solid var(--colorEnPrimarioT);
+    border-right: 1px solid var(--colorEnPrimarioT);
+    border-bottom: 3px solid var(--colorEnPrimarioT);
+    border-left: 3px solid var(--colorEnPrimarioT);
+}
+
+#right {
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+#right > div {
+    width: 100%;
+    height: 100%;
+}
+#right #right-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 1rem;
+}
+#right #right-1 > img {
+    animation: oscilate1 2s ease-in-out infinite alternate;
+}
+#right #right-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding: 1rem;
+}
+#right #right-2 > img {
+    animation: oscilate2 3.5s ease-in infinite alternate;
+}
+#right #right-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 1rem;
+}
+#right #right-3 > img {
+    animation: oscilate1 3s ease-out infinite alternate;
+}
+#right > div > img {
+    max-width: 100%;
 }
 
 #game {
@@ -107,3 +259,74 @@ main {
 }
 
 /*Media queries*/
+
+@media (max-width: 2100px) {
+    html{
+        font-size: 112.5%;
+    }
+}
+@media (max-width: 2000px) {
+    html{
+        font-size: 106.25%;
+    }
+}
+@media (max-width: 1900px) {
+    html{
+        font-size: 100%;
+    }
+}
+@media (max-width: 1800px) {
+    html{
+        font-size: 93.75%;
+    }
+}
+@media (max-width: 1700px) {
+    html{
+        font-size: 87.5%;
+    }
+}
+@media (max-width: 1600px) {
+    html{
+        font-size: 81.25%;
+    }
+}
+@media (max-width: 1500px) {
+    html{
+        font-size: 75%;
+    }
+}
+@media (max-width: 1400px) {
+    html{
+        font-size: 68.75%;
+    }
+}
+@media (max-width: 1200px) {
+    html{
+        font-size: 56.25%;
+    }
+}
+@media (max-width: 1100px) {
+    html{
+        font-size: 50%;
+    }
+}
+@media (max-width: 1000px) {
+    html{
+        font-size: 43.75%;
+    }
+}
+@media (max-width: 900px) {
+    html{
+        font-size: 37.5%;
+    }
+}
+@media (max-width: 800px) {
+    html{
+        font-size: 31.25%;
+    }
+}
+@media (max-width: 700px) {
+    html{
+        font-size: 25%;
+    }
+}
