--- a/YanKenPo/styles.css
+++ b/YanKenPo/styles.css
@@ -83,7 +83,7 @@
     animation-name: fadeIn;
     animation-duration: 1s;
     scroll-behavior: smooth;
-    border: 1px dotted var(--colorSecundarioT);
+    border: 1p dotted var(--colorSecundarioT);
     transition: all 0.5s;
 } 
 html{
@@ -206,7 +206,8 @@ main {
 }
 #left a:hover{
     cursor: pointer;
-    padding: 1.5rem 2.5rem;
+    padding: 1.3rem 2.3rem;
+    opacity: 0.8;
 }
 #left #play {
     color: var(--colorPrimario);
@@ -263,23 +264,27 @@ main {
 }
 
 .game {
-    height: 75vh;
+    height: 100vh;
     width: 100vw;
     display: none;
     grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    padding: 5rem 10rem;
 }
 .game > * {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    place-self: center;
+}
+.choices {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 5rem 10rem;
-}
-.choices {
-    height: 75vh;
-    display: grid;
-    grid-template-rows: 1fr 5fr 1fr;
 }
 .choices > * {
     margin: 1rem auto;
@@ -319,17 +324,22 @@ main {
 }
 .send-button {
     padding: 1rem;
-    margin: 1rem auto;
+    margin: 2rem auto 0 auto;
     width: 30%;
+    height: 10%;
     text-align: center;
     font-weight: bold;
     font-size: var(--texto);
     color: var(--colorPrimario);
     background-color: var(--colorSecundario);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .send-button:hover {
     cursor: pointer;
-    font-size: calc(1.15*var(--texto));
+    font-size: calc(1.1*var(--texto));
+    opacity: 0.8;
 }
 
 .computer {
@@ -339,24 +349,10 @@ main {
     flex-direction: column;
     justify-content: center;
 }
-.computer > * {
-    margin: 2rem auto;
-}
-.comp-election {
-    margin: 0 auto;
-    width: 100%;
-    height: fit-content;
-    margin: 1rem auto;
-    font-size: var(--texto);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 #comp-image {
-    margin: 1rem auto;
-    width: 50%;
+    margin: 3rem auto 1rem auto;
+    width: 30%;
     height: auto;
-    border: 1px solid var(--colorSecundario);
 }
 #comp-text {
     margin: 1rem auto;
