--- a/styles.css
+++ b/styles.css
@@ -59,41 +59,155 @@
     animation-name: fadeIn;
     animation-duration: 1s;
     scroll-behavior: smooth;
-    border: 2px dotted var(--colorSecundario);
+    border: 1p dotted var(--colorSecundario);
+    transition: all 0.5s;
 } 
 html{
     font-size: 62.5%;
 }
 body{
+    height: 100vh;
+    width: 65vw;
     overflow-x: hidden;
     overflow-y: scroll;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
     background-color: var(--colorPrimario);
+    color: var(--colorEnPrimario);
 }
 html, body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    width: 100%;
 }
 :root{
-    --colorPrimario: rgb(255, 255, 255);
-    --colorPrimarioT: rgba(255, 255, 255, 0.7);
+    --colorPrimario: rgb(0, 0, 0);
+    --colorPrimarioT: rgba(0, 0, 0, 0.8);
 
-    --colorEnPrimario: rgb(0, 0, 0);
-    --colorEnPrimarioT: rgba(0, 0, 0, 0.7);
+    --colorEnPrimario: rgb(255, 255, 255);
+    --colorEnPrimarioT: rgba(255, 255, 255, 0.8);
     
-    --colorSecundario: rgb(0, 185, 169);
-    --colorSecundarioT: rgb(0, 185, 169, 0.7);
+    --colorSecundario: #5f98fe;
+    --colorSecundarioT: rgba(95, 152, 254, 0.7);
 
-    --texto: 1.5rem;
-    --subtitulo: 2.5rem;
-    --titulo: 3.5rem;
-    --banner: 5rem;
+    --texto: 1.2vw;
+    --subtitulo: 2.2vw;
+    --titulo: 3vw;
+    --banner: 4.5vw;
 }
 
 /*Fin de estilos generales*/
 
+header {
+    width: 100%;
+    height: 12vh;
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    animation: moveInDown 2s;
+}
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.container img {
+    height: 100%;
+    margin: 0 auto;
+}
+
+
+main {
+    margin: 2rem 1rem;
+    height: 65vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 6fr 5fr;
+}
+.left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.left h2 {
+    font-size: var(--subtitulo);
+    margin: 0;
+}
+.left h1 {
+    font-size: calc(var(--banner)*1.2);
+    margin: 0;
+}
+.left-text{
+    display: flex;
+    flex-direction: row;
+}
+.left-text > div {
+    background-color: var(--colorSecundario);
+    width: var(--subtitulo);
+    height: var(--subtitulo);
+    border-radius: 100%;
+}
+.main-desc{
+    margin: 1rem 0;
+    font-size: var(--texto);
+    color: var(--colorEnPrimarioT);
+    font-family: 'Nunito', sans-serif;
+    max-width: 80%;
+}
+.left-inv{
+    margin: 3rem 0 1rem 0;
+    font-size: calc(var(--texto)/1.3);
+    text-transform: uppercase;
+    color: var(--colorEnPrimario);
+    font-family: 'Nunito', sans-serif;
+    max-width: 40%;
+}
+.left-underline{
+    background-color: var(--colorEnPrimario);
+    height: 0.1rem;
+    width: 40%;
+}
+
+
+footer{
+    width: 100%;
+    height: 15vh;
+}
+nav {
+    margin: 0 auto;
+    height: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.button {
+    margin: 0 12rem;
+    height: 90%;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.button:hover {
+    cursor: pointer;
+}
+.button img {
+    margin: 0 auto;
+    height: 45%;
+    width: auto;
+}
+.button span {
+    margin: 0.5rem auto;
+    color: var(--colorEnPrimario);
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.nav-sep {
+    border: 1px solid var(--colorEnPrimarioT);
+    height: 80%;
+    opacity: 0.6;
+}
 
 
 /*Media queries*/
