--- a/YanKenPo/styles.css
+++ b/YanKenPo/styles.css
@@ -108,7 +108,7 @@ html{
 }
 body{
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     font-family: 'Montserrat', sans-serif;
     background-color: var(--colorPrimario);
 }
@@ -129,10 +129,10 @@ html, body {
     --colorSecundario: rgb(0, 185, 169);
     --colorSecundarioT: rgba(0, 185, 169, 0.7);
 
-    --texto: 1.2vw;
-    --subtitulo: 2.2vw;
-    --titulo: 3vw;
-    --banner: 4vw;
+    --texto: clamp(1.2rem, 0.7153rem + 1.64vw, 1.8rem);
+    --subtitulo: clamp(2.4rem, 1.4rem + 2.8vw, 3rem);
+    --titulo: clamp(3rem, 2rem + 3.5vw, 5rem);
+    --banner: clamp(4rem, 2.5rem + 4vw, 6.5rem);
 }
 
 /*Fin de estilos generales*/
@@ -147,7 +147,7 @@ header {
 }
 .container {
     height: 100%;
-    padding: 0 10rem;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,18 +158,16 @@ header {
     color: var(--colorEnPrimarioT);
 }
 .container > div {
-    margin: 0 15rem 0 15rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 .container > div a{
-    margin: 0 2rem 0 2rem;
-    padding: 0 2rem;
+    white-space: nowrap;
+    margin: 0 2vw;
     font-size: var(--texto);
     color: var(--colorEnPrimario);
     text-decoration: none;
-    width: 15rem;
     text-align: center;
     text-transform: uppercase;
     transition: all 0.5s;
@@ -208,7 +206,7 @@ main {
     margin: 2rem 4rem;
 }
 #left > div {
-    margin: 2.5rem ;
+    margin: 2.5rem;
     width: fit-content;
     height: fit-content;
 }
@@ -278,7 +276,7 @@ main {
     animation: oscilate1 2s ease-in-out infinite alternate;
 }
 #right > div > img {
-    max-width: 100%;
+    max-width: 15vw;
 }
 
 .game {
@@ -318,6 +316,7 @@ main {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
+    gap: 1vw;
 }
 .opcion{
     margin: 0 auto;
@@ -341,7 +340,7 @@ main {
     font-size: var(--texto);
 }
 .send-button {
-    padding: 1rem;
+    padding: 2vw;
     margin: 2rem auto 0 auto;
     width: 30%;
     height: 10%;
@@ -395,3 +394,54 @@ main {
 
 /*Media queries*/
 
+@media (max-width:1150px) {
+    /*Pagina principal*/
+    header * {
+        padding: 0;
+        margin: 0 auto;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: none;
+    }
+    #left {
+        width: 100vw;
+        padding: 0;
+    }
+    #left > * {
+        text-align: center;
+        margin: 1vh auto !important;
+    }
+    #left > div {
+        display: flex;
+        flex-direction: column;
+        margin: 2vh auto;
+        gap: 3vh 0;
+    }
+    #left > div > a {
+        margin: 0 auto;
+    }
+    #right {
+        position: absolute;
+        top: 10vh;
+        z-index: -1;
+        opacity: 0.6;
+    }
+    #right > div > img {
+        max-width: 30vw;
+    }
+
+    /*Juego*/
+    .game {
+        grid-template-columns: none;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .game > * {
+        width: 100%;
+    }
+    .send-button {
+        padding: 2vw 3vw;
+    }
+}
