--- a/styles.css
+++ b/styles.css
@@ -104,22 +104,20 @@
     transition: all 0.5s;
 } 
 html{
+    width: 100%;
     font-size: 62.5%;
-    orientation: landscape;
 }
 body{
     width: 100vw;
     overflow-x: hidden;
-    overflow-y: scroll;
     font-family: sans-serif;
     background-color: var(--colorPrimario);
     color: var(--colorEnPrimario);
-    display: flex;
-    flex-direction: column;
 }
 html, body {
     margin: 0 auto;
     padding: 0;
+    height: 1000vh;
     box-sizing: border-box;
 }
 h1,h2 {
@@ -173,18 +171,11 @@ header {
 
 /*landing*/
 
-main {
-    margin: 2.5vh auto;
-    width: 100%;
-    height: 110vh;
-    display: grid;
-    justify-content: center;
-}
 .intro {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 50%;
+    width: 70%;
     height: 110vh;
     margin: 0 auto;
 }
@@ -211,7 +202,7 @@ main {
     color: var(--colorEnPrimario);
     opacity: 0.7;
     font-family: 'Nunito', sans-serif;
-    max-width: 80%;
+    max-width: 40%;
     text-align: justify;
 }
 .intro-inv{
@@ -220,7 +211,7 @@ main {
     text-transform: uppercase;
     color: var(--colorEnPrimario);
     font-family: monospace;
-    max-width: 40%;
+    max-width: 30%;
     padding: 2vh 2vh 2vh 0;
     white-space: nowrap;
     text-decoration: none;
@@ -233,14 +224,14 @@ main {
 .intro-inv-underline{
     background-color: var(--colorSecundario);
     height: 0.1vw;
-    width: 40%;
+    width: 30%;
 }
 
 /*Resumen*/
 
 .skills {
     width: 70%;
-    height: 100vh;
+    height: 110vh;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -317,7 +308,6 @@ main {
 }
 .skills-container {
     width: 100%;
-    height: 90vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -480,7 +470,6 @@ main {
 .career {
     margin: 5vh auto;
     width: 70%;
-    height: 150vh;
 }
 .career-top{
     display: grid;
@@ -569,9 +558,10 @@ main {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 50vh;
+    height: 52vh;
     outline: 0 solid var(--colorEnPrimario);
     opacity: 0.6;
+    text-decoration: none;
 }
 .achievement > * {
     margin: 1vh auto;
@@ -606,4 +596,12 @@ main {
 }
 .achievement.hidden {
     visibility: hidden;
+}
+
+/*Apartado de contacto*/
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
