port UI finished

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,6 @@ body{
 html, body {
     margin: 0 auto;
     padding: 0;
-    height: 1000vh;
     box-sizing: border-box;
 }
 h1,h2 {
@@ -606,6 +605,81 @@ header {
 /*Apartado de contacto*/
 
 .contact {
+    margin: 0 auto;
+    width: 70%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact * {
+    margin: 2vh auto;
+}
+.contact h3 {
+    font-size: var(--texto);
+    color: var(--colorSecundario);
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.contact h2 {
+    font-size: var(--titulo);
+    color: var(--colorEnPrimario);
+    white-space: nowrap;
+}
+.contact p{
+    max-width: 60%;
+    text-align: justify;
+}
+.contact p a{
+    text-decoration-color: var(--colorEnPrimario);
+    color: var(--colorEnPrimario);
+    font-weight: bold;
+}
+.contact-inv{
+    margin: 4vh auto 0 auto;
+    font-size: calc(var(--texto)/1.3);
+    text-transform: uppercase;
+    color: var(--colorEnPrimario);
+    font-family: monospace;
+    max-width: 30%;
+    padding: 2vh 2vh 2vh 0;
+    white-space: nowrap;
+    text-decoration: none;
+}
+.contact-inv:hover{
+    background-color: rgba(95, 152, 254, 0.05);
+    cursor: pointer;
+    padding-left: 2vw;
+}
+.contact-inv-underline{
+    margin: 0 auto;
+    background-color: var(--colorSecundario);
+    height: 0.1vw;
+    width: 30%;
+}
+
+/*Footer*/
+
+footer{
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.f-wrap {
+    display: flex;
+    justify-content: center;
+}
+.f-wrap h2 {
+    font-size: var(--subtitulo);
+    font-family: 'Dancing Script', sans-serif;
+}
+.f-wrap h3 {
+    font-size: var(--texto);
     display: flex;
     flex-direction: column;
     justify-content: center;
