--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body{
     color: var(--colorEnPrimario);
     display: flex;
     flex-direction: column;
-    gap: 10vh;
+    gap: 30vh;
 }
 html, body {
     margin: 0 auto;
@@ -142,9 +142,11 @@ header {
     margin: 0 auto;
 }
 .intro h2 {
+    width: fit-content;
     font-size: var(--subtitulo);
     margin: 0;
     animation: moveInUp 1.5s ease-out, fadeIn 3s;
+    white-space: nowrap;
 }
 .intro h1 {
     font-size: calc(var(--banner)*1.2);
@@ -197,7 +199,6 @@ header {
 
 .skills {
     width: 70%;
-    height: 110vh;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -261,7 +262,6 @@ header {
 
 .skill-list {
     width: 70%;
-    height: 160vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -283,7 +283,6 @@ header {
 }
 #skills-container-2 {
     grid-template-rows: none;
-    height: 45vh;
 }
 .skills-container div {
     width: 100%;
@@ -380,7 +379,6 @@ header {
 .projects{
     margin: 0 auto;
     width: 70%;
-    height: 120vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2vw;
@@ -388,6 +386,9 @@ header {
 .projects-left {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 .projects-left h2 {
     font-size: var(--titulo);
@@ -399,6 +400,7 @@ header {
     color: var(--colorSecundario);
 }
 .project {
+    width: 100%;
     height: calc(var(--banner)*5);
     background-repeat: no-repeat;
     background-position: center;
@@ -407,7 +409,7 @@ header {
     flex-direction: column;
     justify-content: end;
     font-size: var(--texto);
-    margin: 2vh auto;
+    margin: 2vh auto 0 auto;
     border-radius: 5%;
     text-decoration: none;
 }
@@ -439,13 +441,12 @@ header {
 .career {
     margin: 5vh auto;
     width: 70%;
-    height: 350vh;
     display: flex;
     flex-direction: column;
 }
 .career-top{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
 }
 .career-top h2 {
     font-size: var(--titulo);
@@ -455,42 +456,6 @@ header {
 .career-top h2 strong {
     font-size: var(--subtitulo);
     color: var(--colorSecundario);
-}
-.career-top > div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-}
-.career-top > div > div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-}
-.cv-inv{
-    margin: 4vh 0 0 0;
-    font-size: calc(var(--texto)/1.3);
-    text-transform: uppercase;
-    color: var(--colorEnPrimario);
-    font-family: monospace;
-    max-width: 40%;
-    padding: 2vh 2vh 2vh 0;
-    white-space: nowrap;
-    text-decoration: none;
-}
-.cv-inv:hover{
-    background-color: rgba(95, 152, 254, 0.05);
-    cursor: pointer;
-    padding-left: 1vw;
-}
-.cv-inv-underline{
-    margin: 0;
-    background-color: var(--colorSecundario);
-    height: 0.1vw;
-    width: 40%;
 }
 
 .career-wrap {
@@ -609,7 +574,7 @@ header {
     text-transform: uppercase;
     color: var(--colorEnPrimario);
     font-family: monospace;
-    max-width: 30%;
+    width: 30%;
     padding: 2vh 2vh 2vh 0;
     white-space: nowrap;
     text-decoration: none;
@@ -652,13 +617,41 @@ footer{
     flex-direction: column;
     justify-content: center;
 }
+.cv-c {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.cv-inv{
+    margin: 4vh auto 0 auto;
+    font-size: calc(var(--texto)/1.3);
+    text-transform: uppercase;
+    color: var(--colorEnPrimario);
+    font-family: monospace;
+    width: 40%;
+    padding: 2vh 2vh 2vh 0;
+    white-space: nowrap;
+    text-decoration: none;
+}
+.cv-inv:hover{
+    background-color: rgba(95, 152, 254, 0.05);
+    cursor: pointer;
+    padding-left: 1vw;
+}
+.cv-inv-underline{
+    margin: 0 auto;
+    background-color: var(--colorSecundario);
+    height: 0.1vw;
+    width: 40%;
+}
 
 /*!Animaciones*/
 
 .reveal-up{
     transform: translateY(20vh);
     opacity: 0;
-    transition: 2s all ease;
+    transition: 1.5s all ease;
 }
 .reveal-up.active-up{
     transform: translateY(0);
@@ -668,7 +661,7 @@ footer{
 .reveal-right{
     transform: translateX(-10vw);
     opacity: 0;
-    transition: 2s all ease;
+    transition: 1.5s all ease;
 }
 .reveal-right.active-right{
     transform: translateX(0);
@@ -678,7 +671,7 @@ footer{
 .reveal-left{
     transform: translateX(10vw);
     opacity: 0;
-    transition: 2s all ease;
+    transition: 1.5s all ease;
 }
 .reveal-left.active-left{
     transform: translateX(0);
@@ -706,3 +699,84 @@ footer{
 
 /*!Media queries*/
 
+@media (max-width: 900px) {
+    p, span{
+        line-height: 2.5vh !important;
+    }
+    .intro, .skills, .skill-list, .projects, .career, .contact{
+        width: 85%;
+        margin: 0 auto;
+    }
+    .intro {
+        height: 100vh;
+    }
+    .intro > * {
+        margin: 1.5vh auto !important;
+    }
+    .intro p.main-desc {
+        max-width: 75%;
+    }
+    .intro-inv, .intro-inv-underline {
+        max-width: 70%;
+        font-size: var(--texto);
+        margin: 0 auto !important;
+    }
+
+    .skills{
+        min-height: 70vh;
+        gap: 5vw;
+    }
+
+    .skill-list h2 {
+        white-space: normal;
+        text-align: center;
+    }
+    #skills-container-1 {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    #skills-container-2 {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .projects {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+        gap: 0;
+    }
+    .projects-left {
+        justify-content: end;
+    }
+    .projects-left h2 {
+        text-align: center;
+    }
+    .project{
+        margin: 4vh auto 0 auto;
+    }
+    .project h3 {
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));;;
+        display: flex;
+    }
+
+    .career-top {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+    }
+    .career-right {
+        display: none;
+    }
+    .achievement.hidden {
+        visibility: visible;
+    }
+    
+    footer {
+        height: fit-content;
+        margin: 0 auto;
+        width: 80%;
+    }
+    .footer-wrapper {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
