--- a/YanKenPo/styles.css
+++ b/YanKenPo/styles.css
@@ -27,10 +27,10 @@
 }
 @keyframes moveInUp {
     from{
-        transform: translateY(40rem);
+        transform: translateY(10vh);
     }
     to{
-        transform: translateY(0rem);
+        transform: translateY(0);
     }
 }
 @keyframes moveInLeft {
@@ -391,6 +391,44 @@ main {
     text-align: center;
 }
 
+/*Pop up message*/
+
+#pop-up {
+    display: none;
+    position: absolute;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    background-color: var(--colorPrimario);
+    border: 1px solid var(--colorEnPrimarioT);
+    box-shadow: 0.5vw 0.5vw 0.5vw  var(--colorEnPrimario);
+    width: 30vw;
+    height: 30vh;
+    flex-direction: column;
+    justify-content: center;
+}
+#pop-up h2 {
+    margin: 1vh auto;
+    font-size: var(--subtitulo);
+    color: var(--colorEnPrimario);
+    text-align: center;
+}
+#pop-up a {
+    font-size: var(--texto);
+    color: var(--colorPrimario);
+    background-color: var(--colorSecundario);
+    padding: 1.5vh 1.5vw;
+    margin: 5vh auto 0 auto;
+    border-radius: 5%;
+    transition: all 0.5s;
+}
+#pop-up a:hover {
+    cursor: pointer;
+    background-color: var(--colorSecundarioT);
+    padding: 1.7vh 1.7vw;
+}
 
 /*Media queries*/
 
